--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
         <title>PROYECTO BOGOTA SOSTENIBLE</title>
 </head>
-<body background="Diapositiva1.JPG"> 
+<body background="https://i.ibb.co/Yh89DJG/Diapositiva1.jpg"> 
 <center>
     <font color="AA900F">
        <h1>
